[gd_scene load_steps=6 format=3 uid="uid://bnsgohjxk8jo4"]

[ext_resource type="Script" path="res://gui/options_menu.gd" id="1_yglhn"]
[ext_resource type="Script" path="res://gui/MasterVolume.gd" id="2_km3hh"]
[ext_resource type="Script" path="res://gui/BGMVolume.gd" id="3_uqptg"]
[ext_resource type="Script" path="res://gui/SFXVolume.gd" id="4_kqjyr"]
[ext_resource type="Script" path="res://gui/KeybindsButton.gd" id="5_50gtr"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_yglhn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -305.0
offset_right = 400.0
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 0
text = "菜单"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(740, 440)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
current_tab = 1

[node name="Audio" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 34

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
text = "总音量"

[node name="MasterVolume" type="HSlider" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("2_km3hh")

[node name="Label2" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
text = "音乐"

[node name="BGMVolume" type="HSlider" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("3_uqptg")

[node name="Label3" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
text = "音效"

[node name="SFXVolume" type="HSlider" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("4_kqjyr")

[node name="KeyBinds" type="GridContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 6
columns = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds"]
layout_mode = 2
size_flags_horizontal = 3
text = "jump"
horizontal_alignment = 1

[node name="Jump" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5_50gtr")

[node name="Label2" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds"]
layout_mode = 2
size_flags_horizontal = 3
text = "move_left"
horizontal_alignment = 1

[node name="Left" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5_50gtr")
action = "move_left"

[node name="Label3" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds"]
layout_mode = 2
size_flags_horizontal = 3
text = "move_right"
horizontal_alignment = 1

[node name="KeybindsButton3" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5_50gtr")
action = "move_right"

[node name="www" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Save" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" groups=["button"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "存档"

[node name="OptionsExit" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" groups=["button"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "返回"

[connection signal="drag_ended" from="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Audio/MasterVolume" to="." method="_on_master_volume_drag_ended"]
[connection signal="drag_ended" from="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Audio/BGMVolume" to="." method="_on_bgm_volume_drag_ended"]
[connection signal="drag_ended" from="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/Audio/SFXVolume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="toggled" from="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds/Jump" to="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds/Jump" method="_on_toggled"]
[connection signal="toggled" from="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds/Left" to="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds/Left" method="_on_toggled"]
[connection signal="toggled" from="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds/KeybindsButton3" to="Control/PanelContainer/MarginContainer/VBoxContainer/TabContainer/KeyBinds/KeybindsButton3" method="_on_toggled"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsExit" to="." method="_on_button_pressed"]
